<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2026 crDroid Android Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.android.settingslib.widget.LayoutPreference
        android:key="headers"
        android:layout="@layout/per_app_header"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false" />

    <ListPreference
        android:key="per_app_thermal_profile"
        android:persistent="false"
        android:summary="%s"
        android:title="@string/per_app_thermal_title" />

    <SwitchPreference
        android:key="per_app_gpu_composition"
        android:persistent="false"
        android:title="@string/per_app_gpu_composition_title"
        android:summary="@string/per_app_gpu_composition_summary" />

    <PreferenceCategory android:title="@string/touch_tuning_category_title">
        <SwitchPreference
            android:key="per_app_touch_super_report"
            android:persistent="false"
            android:title="@string/super_report_rate_title"
            android:summary="@string/super_report_rate_summary" />

        <SwitchPreference
            android:key="per_app_touch_expert_mode"
            android:persistent="false"
            android:title="@string/expert_mode_title"
            android:summary="@string/expert_mode_summary" />

        <com.android.settingslib.widget.SliderPreference
            android:key="per_app_touch_expert_preset"
            android:persistent="false"
            android:title="@string/expert_preset_title" />

        <com.android.settingslib.widget.SliderPreference
            android:key="per_app_touch_threshold"
            android:persistent="false"
            android:title="@string/tune_touch_up_threshold_title" />

        <com.android.settingslib.widget.SliderPreference
            android:key="per_app_touch_tolerance"
            android:persistent="false"
            android:title="@string/tune_jitter_tolerance_title" />

        <com.android.settingslib.widget.SliderPreference
            android:key="per_app_touch_aim_sens"
            android:persistent="false"
            android:title="@string/tune_aim_sensitivity_title" />

        <com.android.settingslib.widget.SliderPreference
            android:key="per_app_touch_tap_stab"
            android:persistent="false"
            android:title="@string/tune_tap_stability_title" />

        <com.android.settingslib.widget.SliderPreference
            android:key="per_app_touch_edge_filter"
            android:persistent="false"
            android:title="@string/tune_edge_filter_title" />
    </PreferenceCategory>

    <ListPreference
        android:key="per_app_resolution"
        android:persistent="false"
        android:summary="%s"
        android:title="@string/per_app_resolution_title" />

    <ListPreference
        android:key="per_app_angle_driver"
        android:persistent="false"
        android:summary="%s"
        android:title="@string/per_app_angle_title" />

    <ListPreference
        android:key="per_app_afme"
        android:persistent="false"
        android:title="@string/per_app_afme_title" />

    <ListPreference
        android:key="per_app_afme_factor"
        android:persistent="false"
        android:title="@string/per_app_afme_factor_title"
        android:dependency="per_app_afme" />

    <ListPreference
        android:key="per_app_sgsr"
        android:persistent="false"
        android:title="@string/per_app_sgsr_title" />

    <SwitchPreference
        android:key="per_app_smooth_motion"
        android:persistent="false"
        android:title="@string/per_app_smooth_motion_title"
        android:summary="@string/per_app_smooth_motion_summary" />

    <ListPreference
        android:key="per_app_vrs"
        android:persistent="false"
        android:title="@string/per_app_vrs_title" />

    <SwitchPreference
        android:key="per_app_color_enhance"
        android:persistent="false"
        android:title="@string/per_app_color_enhance_title"
        android:summary="@string/per_app_color_enhance_summary" />

    <Preference
        android:icon="@drawable/ic_remove"
        android:key="per_app_unregister"
        app:allowDividerAbove="true" />

</PreferenceScreen>
